apps/cluster/velld/templates/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: velld
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web 
    - websecure
  routes:
    - match: Host(`velld.cloud.obara.xyz`)
      middlewares:
        - name: traefik-oidc-auth
          namespace: traefik
      kind: Rule
      services:
        - name: velld-web
          namespace: default
          port: 3000
